<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/title_bar_layout"/>


    <android.support.design.widget.TextInputEditText
        android:id="@+id/todo_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#B5B3B5"
        android:textColor="@android:color/black"
        android:hint="@string/input_todo_name"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:textSize="16sp"
        android:background="@null"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#B5B3B5"
        android:layout_marginTop="5dp"/>
    <android.support.design.widget.TextInputEditText
        android:id="@+id/todo_des"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="#B5B3B5"
        android:textColor="@android:color/black"
        android:hint="@string/input_todo_des"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginLeft="@dimen/dp_10"
        android:layout_marginRight="@dimen/dp_10"
        android:background="@null"
        android:textSize="16sp"
        android:gravity="left|top"
        android:minLines="8"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#B5B3B5"
        android:layout_marginTop="5dp"/>
    <TextView
        android:id="@+id/todo_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_10"
        android:drawableLeft="@drawable/date"
        android:drawablePadding="5dp"
        android:textSize="16sp"
        android:textColor="@android:color/black"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#B5B3B5"
        android:layout_marginTop="1dp"/>

    <Button
        android:id="@+id/save_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:text="@string/save"
        android:background="@drawable/selector_button"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"/>
</LinearLayout>